--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ box-shadow: 0 4px 8px rgba(50, 73, 75, 0.107);
   background-color: #0e715d;
 }
 .hmg1{
-  width: 20%;
+  width: 10%;
   margin-left: 10px;
 }
 
@@ -111,7 +111,7 @@ box-shadow: 0 4px 8px rgba(50, 73, 75, 0.107);
 }
 
 .hmg2{
-  width: 20%;
+  width: 10%;
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -207,13 +207,13 @@ footer{
 
 .card-sec3{
   background-color: white;
-  height: 100px;
+  height: 140px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  padding: 5px;
+  padding: 20px;
   box-shadow: 0 4px 8px rgba(255, 254, 254, 0.4);
   margin-bottom: 20px;
   transition: all 0.5s ease-in-out;
@@ -238,3 +238,26 @@ footer{
   background-color: #10375C;
   color: white;
 }
+
+
+/* تنسيق صفحة اسالة البرمجة */
+
+
+.sec1-prog{
+  background-color: #10375C;
+  height: 200px;
+  color:white;
+}
+
+.casd{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+
+ .casd h4{
+  text-align: center;
+  margin-top: 60px;
+} 
